apply plugin: 'java'
apply plugin: 'eclipse'

group = 'net.gredler.zcheck'
version = '1.0.0'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.yaml:snakeyaml:1.25'
    testImplementation 'com.github.mifmif:generex:1.0.2'
    testImplementation 'uk.org.okapibarcode:okapibarcode:0.2.3'
    testImplementation 'com.google.zxing:javase:3.4.0'
}

sourceCompatibility = 14
targetCompatibility = 14

compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'
javadoc.options.encoding = 'UTF-8'

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}

task zcheck(type: JavaExec) {
    classpath = sourceSets.test.runtimeClasspath
    main = 'net.gredler.zcheck.ZCheck'
    jvmArgs += "--enable-preview"
}

wrapper {
    gradleVersion = '6.5.1'
}
